--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
   <head>
     <title>Lake Tahoe</title>
-    <link rel="stylesheet" href="css/application.css">
-    <meta name="viewport" content="width=device-width">
+    <link rel="stylesheet" href="css/application.css"/>
+      <link rel="shortcut icon" href="img/favicon/favicon.ico"/>
+      <meta name="viewport" content="width=device-width"/>
   </head>
   <body> 
     <header id="top" class="main-header">
