--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Lake Tahoe</title>
-    <link rel="stylesheet" href="css/application.css"/>
-      <meta name="viewport" content="width=device-width"/>
+      <title>Lake Tahoe</title>
+      <link rel="stylesheet" href="src/css/application.css" />
+      <link rel="shortcut icon" href="img/favicon/favicon.ico" />
+      <meta name="viewport" content="width=device-width" />
   </head>
   <body> 
     <header id="top" class="main-header">
@@ -62,6 +63,6 @@
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
     
-    <script src="js/app.js"></script>
+    <script src="src/js/app.min.js"></script>
   </body>
 </html>
