--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
 			<a href="#top">Back to top &raquo;</a>
 		</footer>
     
-    <script src="./js/app.min.js"></script>
+    <script src="js/app.min.js"></script>
   </body>
 </html>
